src/test/deca/syntax/invalid/Inclusion_fichier_inexistant.deca
// Description:
//    inclusion d'un fichier qui n'existe pas
//
// Resultats:
//    Une erreur de compilation
//
// Historique:
//    cree le 04/01/2023
#include "unknown_file.decah"
{
    println("Hello");          
}
